#subdir('metaheuristics/singleObjective/cmaes')
#cmaes_lib=static_library(
#    'cmaes_lib',
#    meta_so_cmaes_src,
#    include_directories:[common_inc,meta_so_cmaes_inc],
#    link_with: common_lib
#)
#
#CMAES_main_src = files('main/CMAES_main.cpp')
#CMAES_main = executable('CMAES_main', CMAES_main_src,
#           include_directories: [common_inc,meta_so_cmaes_inc],
#           link_with: cmaes_lib)

# CMAES_main_src = files('main' / 'CMAES_main.cpp')
# CMAES_main = executable('CMAES_main', CMAES_main_src,
#            include_directories: inc_dirs,
#            dependencies: [phys_dep, math_dep],
#            install:true)

# operators
# operator_lib = library(
#     'operator_lib',
#     core_src,
#     include_directories: core_inc)

# exe = executable('main', 'main.c', link_with : lib)
# t = executable(
#   'main',
#   ['main.c', 'rone.c'],
#   include_directories : inc,
#   implicit_include_directories : false,
# )

# experiments
#subdir('experiments')

# main
# CMAES_main_src = files('main' / 'CMAES_main.cpp')
# CMAES_main = executable('CMAES_main', CMAES_main_src,
#            include_directories: inc_dirs,
#            dependencies: [phys_dep, math_dep],
#            install:true)