core_src = files(
    'Algorithm.cpp',
    'Operator.cpp',
    'Problem.cpp',
    'Solution.cpp',
    'SolutionSet.cpp',
    'SolutionType.cpp',
    'Variable.cpp',
)
core_inc = include_directories('.')

# core_lib = library(
#     'core_lib',
#     core_src,
#     include_directories: core_inc)
# core_dep = declare_dependency(
#     include_directories: core_inc,
#     link_with: core_lib)