subdir('solutionType')
# encodings_solutionType_src
# encodings_solutionType_inc
# core
# variable
subdir('variable')
# encodings_variable_src
# encodings_variable_inc
# util
# core
encodings_src = [encodings_solutionType_src,encodings_variable_src]
encodings_inc = [encodings_solutionType_inc,encodings_variable_inc]

