# crossover
crossover_inc=include_directories('.')
crossover_src=files(
    'Crossover.cpp',
    'DifferentialEvolutionCrossover.cpp',
    'HUXCrossover.cpp',
    'OXCrossover.cpp',
    'PositionBasedCrossover.cpp',
    'SBXCrossover.cpp',
    'SinglePointCrossover.cpp',
)
#crossover_lib = library(
#    'crossover_lib',
#    crossover_src,
#    include_directories: crossover_inc)