# mutation
mutation_inc=include_directories('.')
mutation_src=files(
    'BitFlipMutation.cpp',
    'InsertionMutation.cpp',
    'InversionMutation.cpp',
    'Mutation.cpp',
    'NonUniformMutation.cpp',
    'PolynomialMutation.cpp',
    'UniformMutation.cpp',
)
#mutation_lib = library(
#    'mutation_lib',
#    mutation_src,
#    include_directories: mutation_inc)