# selection
selection_inc=include_directories('')
selection_src=files(
    'BestSolutionSelection.cpp',
    'BinaryTournament.cpp',
    'BinaryTournament2.cpp',
    'DifferentialEvolutionSelection.cpp',
    'RandomSelection.cpp',
    'Selection.cpp',
    'WorstSolutionSelection.cpp',
)
#selection_lib = library(
#    'selection_lib',
#    selection_src,
#    include_directories: selection_inc)