util_comparators_src=files(
    'Comparator.cpp',
    'CrowdingComparator.cpp',
    'CrowdingDistanceComparator.cpp',
    'DominanceComparator.cpp',
    'EpsilonDominanceComparator.cpp',
    'EpsilonObjectiveComparator.cpp',
    'EqualSolutions.cpp',
    'ObjectiveComparator.cpp',
    'OverallConstraintViolationComparator.cpp',
    'RankComparator.cpp',
    'SolutionComparator.cpp',
)
util_comparators_inc = include_directories('.')